--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,95 @@
 body {
     height: 100vh;
+    margin: 0;
     display: flex;
     flex-direction: column;
+    font-family: sans-serif;
 }
 
 header {
-    top: 0px;
+    border: solid;
+    height: 100px;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.headerContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-width: 80%;
+    gap: 20px;
+}
+
+header button {
+    height: 40px;
+    font-size: 24px;
 }
 
 .addAnimeBtnDiv {
-    
+    flex: auto;
+    border: solid;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+}
+
+.addAnimeBtn {
+    font-family: sans-serif;
+    font-size: 24px;
+    height: 40px;
+    min-width: 160px;
+    width: 160px;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+.addAnimeForm {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 250px;
+    max-width: 80%;
+    border: solid;
+    gap: 20px;
+    padding: 10px;
+}
+
+.watched {
+    display: flex;
+    justify-content: center;
 }
 
 footer {
-    bottom: -100px;
+    border: solid;
+    text-align: center;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
+}
+
+#overlay {
+    position: fixed;
+    opacity: 0;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    background-color: rgba(0, 0, 0, 0.5);
+    pointer-events: none;
+}
+
+#overlay:active {
+    opacity: 1;
+    pointer-events: all;
 }
