--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ header button {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
     z-index: 10;
     display: flex;
     flex-direction: column;
@@ -61,6 +62,10 @@ header button {
     border: solid;
     gap: 20px;
     padding: 10px;
+}
+
+.addAnimeForm:active {
+    transform: translate(-50%, -50%) scale(1);
 }
 
 .watched {
