--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,13 @@ header button {
     margin-bottom: 50px;
 }
 
-.addAnimeForm {
+.displayContainer {
+    width: 100%;
+    height: 10%;
+    background-color: red;
+}
+
+#addAnimeForm {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -62,9 +68,10 @@ header button {
     border: solid;
     gap: 20px;
     padding: 10px;
+    background-color: white;
 }
 
-.addAnimeForm:active {
+#addAnimeForm.active {
     transform: translate(-50%, -50%) scale(1);
 }
 
@@ -85,6 +92,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #overlay {
     position: fixed;
+    transition: 200ms ease-in-out;
     opacity: 0;
     top: 0px;
     left: 0px;
@@ -94,7 +102,7 @@ h1, h2, h3, h4, h5, h6 {
     pointer-events: none;
 }
 
-#overlay:active {
+#overlay.active {
     opacity: 1;
     pointer-events: all;
 }
